<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.amati.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.dicoding.amati.ui.explore.ExploreFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.dicoding.amati.ui.message.MessageFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.amati.ui.profile.ProfileFragment"
        android:label="@string/profile_fragment"
        tools:layout="@layout/fragment_profile" />
</navigation>