<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_amati_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:contentDescription="@string/amati_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/image_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_second"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rectangle_17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_first">

        <ImageView
            android:id="@+id/iv_recycle_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/_26_recycle_bin"
            android:contentDescription="@string/recycle_logo" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="password"
            android:background="@drawable/custom_edt_pass"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textColor="@color/green_army"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/custom_edt"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login_btn"
            android:backgroundTint="@color/yellow"
            app:layout_constraintEnd_toEndOf="@+id/ed_password"
            app:layout_constraintStart_toStartOf="@id/ed_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_password"
            />

        <Button
            android:id="@+id/btn_google_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/tv_or"
            android:text="@string/google_account" />

        <ImageView
            android:id="@+id/iv_logo_google"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="58dp"
            android:contentDescription="@string/google_logo"
            android:elevation="2dp"
            android:src="@drawable/group_1"
            app:layout_constraintBottom_toBottomOf="@+id/btn_google_login"
            app:layout_constraintStart_toStartOf="@+id/btn_google_login"
            app:layout_constraintTop_toTopOf="@+id/btn_google_login" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/register_here"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_google_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_google_login" />

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/no_account"
            android:textColor="@color/green_army"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_register"
            app:layout_constraintTop_toTopOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_google_login"/>

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/or"
            android:textColor="@color/green_army"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <ImageView
            android:id="@+id/iv_logo_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/ed_password"
            app:layout_constraintStart_toStartOf="@+id/ed_password"
            app:layout_constraintTop_toTopOf="@+id/ed_password"
            app:srcCompat="@drawable/key"
            android:contentDescription="@string/password_logo" />

        <ImageView
            android:id="@+id/iv_logo_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/edt_email"
            app:layout_constraintStart_toStartOf="@+id/edt_email"
            app:layout_constraintTop_toTopOf="@+id/edt_email"
            app:srcCompat="@drawable/email"
            android:contentDescription="@string/email_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>