<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cl_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_amati_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:contentDescription="@string/amati_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_second"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rectangle_17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_first">

        <ImageView
            android:id="@+id/iv_recycle_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.25"
            android:contentDescription="@string/recycle_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/peoplebin"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up"
            android:textColor="@color/green_army"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_edt"
            android:hint="@string/username"
            android:textColorHint="@color/green_army"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup"
            android:autofillHints="username" />

        <ImageView
            android:id="@+id/iv_logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/username_logo"
            app:layout_constraintBottom_toBottomOf="@+id/ed_name"
            app:layout_constraintStart_toStartOf="@+id/ed_name"
            app:layout_constraintTop_toTopOf="@+id/ed_name"
            app:srcCompat="@drawable/id_card" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/custom_edt"
            android:hint="@string/email"
            android:textColorHint="@color/green_army"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_name" />

        <ImageView
            android:id="@+id/iv_logo_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/email_logo"
            app:layout_constraintBottom_toBottomOf="@+id/ed_email"
            app:layout_constraintStart_toStartOf="@+id/ed_email"
            app:layout_constraintTop_toTopOf="@+id/ed_email"
            app:srcCompat="@drawable/email"
            tools:layout_editor_absoluteX="16dp" />


        <EditText
            android:id="@+id/ed_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="password"
            android:background="@drawable/custom_edt_pass"
            android:hint="@string/password"
            android:textColorHint="@color/green_army"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_email" />

        <ImageView
            android:id="@+id/iv_logo_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/ed_password"
            app:layout_constraintStart_toStartOf="@+id/ed_password"
            app:layout_constraintTop_toTopOf="@+id/ed_password"
            app:srcCompat="@drawable/key"
            android:contentDescription="@string/password_logo" />

        <EditText
            android:id="@+id/ed_password_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="password"
            android:background="@drawable/custom_edt_pass"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/green_army"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_password" />

        <ImageView
            android:id="@+id/iv_logo_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/confirm_password"
            app:layout_constraintBottom_toBottomOf="@+id/ed_password_confirm"
            app:layout_constraintStart_toStartOf="@+id/ed_password_confirm"
            app:layout_constraintTop_toTopOf="@+id/ed_password_confirm"
            app:srcCompat="@drawable/key" />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="phone"
            android:background="@drawable/custom_edt"
            android:hint="@string/phone"
            android:textColorHint="@color/green_army"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_password_confirm" />

        <ImageView
            android:id="@+id/iv_logo_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/ed_phone"
            app:layout_constraintStart_toStartOf="@+id/ed_phone"
            app:layout_constraintTop_toTopOf="@+id/ed_phone"
            app:srcCompat="@drawable/telephone"
            android:contentDescription="@string/phone_logo" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="@id/ed_phone"
            app:layout_constraintStart_toStartOf="@id/ed_phone"
            app:layout_constraintTop_toBottomOf="@+id/ed_phone"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/yellow"/>

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

        <Button
            android:id="@+id/btn_google_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/google_account"
            app:layout_constraintEnd_toEndOf="@id/btn_signup"
            app:layout_constraintStart_toStartOf="@id/btn_signup"
            app:layout_constraintTop_toBottomOf="@id/tv_or"
            android:backgroundTint="@color/yellow"/>

        <ImageView
            android:id="@+id/iv_logo_google"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:src="@drawable/group_1"
            android:elevation="2dp"
            android:layout_marginStart="50dp"
            app:layout_constraintTop_toTopOf="@+id/btn_google_login"
            app:layout_constraintBottom_toBottomOf="@+id/btn_google_login"
            app:layout_constraintStart_toStartOf="@id/btn_google_login"
            android:contentDescription="@string/google_logo" />

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/have_account"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_login"
            app:layout_constraintEnd_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toTopOf="@+id/btn_login" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/login_btn"
            android:textColor="@color/green_army"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_google_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_google_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>